--- a/asset/css/shop.css
+++ b/asset/css/shop.css
@@ -14,33 +14,37 @@ body {
 }
 
 .slider-container {
-    overflow-x: auto;
-    white-space: nowrap;
+    display: flex;
+    justify-content: center;
     padding: 10px;
-    background-color: #fff;
-    border-bottom: 1px solid #ddd;
+    background-color: #000;
 }
 
 .slider {
-    display: inline-flex;
+    display: flex;
+    justify-content: center;
 }
 
 .slide {
-    padding: 10px 20px;
-    margin: 5px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    cursor: pointer;
-    background-color: #f1f1f1;
-    user-select: none;
+    margin-right: 20px;
 }
 
-.slide:hover {
-    background-color: #ddd;
-}
-
-.slide a{
+.slide a {
     text-decoration: none;
+    font-family: Arial, sans-serif;
+    color: rgba(255, 255, 255, 0.5); 
+    font-weight: normal;
+}
+
+.slide a.active {
+    color: #fff;
+    text-decoration: underline;
+    text-underline-offset: 3px;
+    text-decoration-thickness: 3px;
+}
+
+.slide a:hover {
+    color: #fff; 
 }
 
 .slide a:visited{
@@ -71,13 +75,23 @@ body {
     margin-bottom: 16px;
 }
 
-.product h2 {
-    font-size: 1.5em;
+.product h3 {
+    text-transform: uppercase;
+    font-size: 1em;
+    font-weight: 500;
     margin: 0 0 10px;
 }
 
-.product p {
-    font-size: 1.2em;
+.product h4 {
+    text-transform: uppercase;
+    font-size: 1em;
+    font-weight: 500;
+    margin: 0 0 10px;
+}
+
+.product h5 {
+    font-size: 0.8em;
+    font-weight: 300;
     color: #888;
     margin: 0 0 20px;
 }
@@ -283,6 +297,39 @@ button:hover {
     color: #666;
 }
 
+
+
+.product .cart-btn, .product .buy-btn {
+    width: 90%;
+    padding: 15px 0;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    border-radius: 0; /* Remove border radius */
+    font-size: 0.8em; 
+    cursor: pointer;
+    margin: 10px 0; /* Adjust the margin to space them apart */
+    border-radius: 0.1em;
+}
+
+.product .buy-btn {
+    background-color: transparent; /* Transparent background */
+    color: #000; /* Text color black */
+    border: 1px solid #000; /* Add black border */
+    font-weight: normal; /* Regular weight for this button */
+}
+
+.product .cart-btn:hover {
+    background-color: #333; /* Slightly lighter on hover */
+}
+
+.product .buy-btn:hover {
+    background-color: #f5f5f5; /* Slight hover effect for the favourite button */
+    color: #000; /* Retain black text */
+}
+
+
+/*
 .product .cart-btn, .product .buy-btn {
     width: 48%;
     padding: 10px;
@@ -306,3 +353,5 @@ button:hover {
 .product .buy-btn:hover {
     background-color: #218838;
 }
+*/
+
