+ new cart db table + added productDetail.php + changed login and register

--- a/asset/css/shop.css
+++ b/asset/css/shop.css
@@ -355,3 +355,11 @@ button:hover {
 }
 */
 
+.container a{
+    text-decoration: none;
+    color: black;
+}
+
+.container a:hover{
+    color:#888;
+}
