--- a/asset/css/register.css
+++ b/asset/css/register.css
@@ -13,7 +13,7 @@ p {
     color: gray;
 }
 
-header {
+.header {
     position: fixed;
     top: 0;
     left: 0;
@@ -27,13 +27,13 @@ header {
     box-sizing: border-box;
 }
 
-header a {
+.header a {
     color: white;
     text-decoration: none;
     padding: 10px;
 }
 
-header .cart {
+.header .cart {
     margin-left: auto;
 }
 
