--- a/asset/css/shop.css
+++ b/asset/css/shop.css
@@ -1,10 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f8f8f8;
-}
-
 /* Slider Selector */
 body {
     font-family: Arial, sans-serif;
@@ -96,29 +89,6 @@ body {
     margin: 0 0 20px;
 }
 
-button {
-    padding: 10px 15px;
-    margin: 5px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.cart-btn {
-    background-color: #28a745;
-    color: #fff;
-}
-
-.buy-btn {
-    background-color: #007bff;
-    color: #fff;
-}
-
-button:hover {
-    opacity: 0.8;
-}
-
-
 
 /* Product Grid*/
 
@@ -163,16 +133,6 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
-
-.cart-btn {
-    background-color: #28a745;
-    color: #fff;
-}
-
-.buy-btn {
-    background-color: #007bff;
-    color: #fff;
 }
 
 button:hover {
@@ -269,63 +229,38 @@ button:hover {
 }
 
 
-/* Product styles for better visualization */
-.product {
-    margin-bottom: 20px;
-    padding: 10px;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    text-align: center;
-}
-
-.product img {
-    width: 100%;
-    max-width: 200px;
-    height: auto;
-    margin-bottom: 10px;
-}
-
-.product h2 {
-    font-size: 20px;
-    margin: 10px 0;
-}
-
-.product p {
-    font-size: 14px;
-    margin: 5px 0;
-    color: #666;
-}
-
-
-
 .product .cart-btn, .product .buy-btn {
-    width: 90%;
-    padding: 15px 0;
+    display: inline-block;
+    width: 48%;
+    padding: 12px;
+    text-align: center;
+    border-radius: 4px;
+    font-size: 0.9em;
+    cursor: pointer;
+    margin: 5px 1%;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.product .cart-btn {
     background-color: #000;
     color: #fff;
     border: none;
-    border-radius: 0; /* Remove border radius */
-    font-size: 0.8em; 
-    cursor: pointer;
-    margin: 10px 0; /* Adjust the margin to space them apart */
-    border-radius: 0.1em;
-}
-
-.product .buy-btn {
-    background-color: transparent; /* Transparent background */
-    color: #000; /* Text color black */
-    border: 1px solid #000; /* Add black border */
-    font-weight: normal; /* Regular weight for this button */
 }
 
 .product .cart-btn:hover {
-    background-color: #333; /* Slightly lighter on hover */
+    background-color: #999;
+    color: #fff;
+}
+
+.product .buy-btn {
+    background-color: transparent;
+    color: #000;
+    border: none;
 }
 
 .product .buy-btn:hover {
-    background-color: #f5f5f5; /* Slight hover effect for the favourite button */
-    color: #000; /* Retain black text */
+    background-color: #ccc;
+    color: #000;
 }
 
 
