--- a/asset/css/login.css
+++ b/asset/css/login.css
@@ -13,40 +13,6 @@ p {
     color: gray;
 }
 
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw; 
-    background-color: #000;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px; 
-    box-sizing: border-box;
-}
-
-.header a {
-    color: white;
-    text-decoration: none;
-    padding: 10px;
-}
-
-.header .cart {
-    margin-left: auto;
-}
-
-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    padding-top: 120px; 
-    box-sizing: border-box;
-}
-
 form {
     background-color: #fff;
     border-radius: 8px;
@@ -54,8 +20,7 @@ form {
     padding: 40px;
     max-width: 400px;
     width: 100%;
-    margin: 0 auto;
-    margin-top: 25vh;
+    margin-top: 20px;
 }
 
 label {
