--- a/asset/css/login.css
+++ b/asset/css/login.css
@@ -1,3 +1,4 @@
+@import url(header.css);
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -13,6 +14,16 @@ p {
     color: gray;
 }
 
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    padding-top: 120px; 
+    box-sizing: border-box;
+}
+
 form {
     background-color: #fff;
     border-radius: 8px;
@@ -20,7 +31,7 @@ form {
     padding: 40px;
     max-width: 400px;
     width: 100%;
-    margin-top: 20px;
+    margin: auto auto;
 }
 
 label {
