--- a/asset/css/register.css
+++ b/asset/css/register.css
@@ -1,3 +1,4 @@
+@import url(header.css);
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -11,40 +12,6 @@ body {
 
 p {
     color: gray;
-}
-
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw; 
-    background-color: #000;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px; 
-    box-sizing: border-box;
-}
-
-.header a {
-    color: white;
-    text-decoration: none;
-    padding: 10px;
-}
-
-.header .cart {
-    margin-left: auto;
-}
-
-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    padding-top: 120px; 
-    box-sizing: border-box;
 }
 
 form {
