--- a/asset/css/login.css
+++ b/asset/css/login.css
@@ -43,7 +43,8 @@ label {
 
 input[type="email"],
 input[type="password"],
-input[type="text"] {
+input[type="text"],
+input[type="file"]{
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
